Add multi-tenant MCP server foundation
- Add database layer with encrypted credential storage
- Add Flask web server for OAuth flow
- Add Railway deployment configuration
- Update dependencies (Flask, cryptography)
- Add deployment documentation

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,28 @@
-# Gmail API OAuth Credentials
-# Path to your credentials.json file downloaded from Google Cloud Console
-GMAIL_CREDENTIALS_PATH=./credentials/credentials.json
+# Google OAuth Configuration (YOUR shared OAuth app)
+# Get these from: https://console.cloud.google.com
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
 
-# Path where OAuth token will be stored (auto-created during setup)
-GMAIL_TOKEN_PATH=./credentials/token.json
+# OAuth Redirect URI
+# Local: http://localhost:8080/auth/callback
+# Railway: https://yourapp.railway.app/auth/callback
+GOOGLE_REDIRECT_URI=http://localhost:8080/auth/callback
 
-# OAuth Configuration
-# Scope for read-only Gmail access
-GMAIL_OAUTH_SCOPES=https://www.googleapis.com/auth/gmail.readonly
+# OAuth Scopes (comma-separated)
+GOOGLE_OAUTH_SCOPES=https://www.googleapis.com/auth/gmail.modify,https://www.googleapis.com/auth/calendar,https://www.googleapis.com/auth/userinfo.email
+
+# Token Encryption Key
+# Generate with: python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+TOKEN_ENCRYPTION_KEY=your-generated-key-here
+
+# Database Path
+DATABASE_PATH=./data/users.db
 
 # Server Configuration
-MCP_SERVER_NAME=gmail-reply-tracker
-LOG_LEVEL=INFO
+PORT=8080
+FLASK_ENV=development
+SESSION_SECRET=your-random-secret-here
 
-# Optional: Rate Limiting
-# Maximum Gmail API requests per minute (default: 60)
-GMAIL_API_MAX_REQUESTS_PER_MINUTE=60
+# Railway Auto-Sets These (leave empty for local development)
+RAILWAY_PUBLIC_DOMAIN=
+RAILWAY_ENVIRONMENT=
