--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,13 @@ python-dateutil>=2.9.0
 requests>=2.31.0
 tzlocal>=5.0.0
 
+# Web server for OAuth
+Flask>=3.0.0
+Werkzeug>=3.0.0
+
+# Encryption for token storage
+cryptography>=41.0.0
+
 # Testing
 pytest>=8.0.0
 pytest-asyncio>=0.24.0
