--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ requests>=2.31.0
 tzlocal>=5.0.0
 pandas>=2.0.0
 
+# Force rebuild - 2025-12-16
+
 # Web server for OAuth
 Flask>=3.0.0
 Werkzeug>=3.0.0
