--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install -r requirements.txt"
+buildCommand = "find . -type d -name '__pycache__' -exec rm -rf {} + || true && find . -name '*.pyc' -delete || true && pip install -r requirements.txt"
 
 [deploy]
-startCommand = "python src/web_server_main.py"
+startCommand = "python -B src/web_server_main.py"
 healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
