--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ GOOGLE_REDIRECT_URI=http://localhost:8080/auth/callback
 
 # OAuth Scopes (comma-separated)
 # IMPORTANT: These scopes must match what's configured in Google Cloud Console OAuth consent screen
-GOOGLE_OAUTH_SCOPES=https://www.googleapis.com/auth/gmail.modify,https://www.googleapis.com/auth/calendar,https://www.googleapis.com/auth/userinfo.email
+GOOGLE_OAUTH_SCOPES=https://www.googleapis.com/auth/gmail.modify,https://www.googleapis.com/auth/calendar,https://www.googleapis.com/auth/documents,https://www.googleapis.com/auth/userinfo.email
 
 # OAuth Library Configuration
 # Fixes Google OAuth adding 'openid' scope causing validation errors
